ontol/ontol-compiler/test-cases/error/union/is_flattened_union.on
def foo (
    rel .is: (
        rel .is?: bar
        rel .is?: baz
    )
)

def bar (rel .'type': 'bar')
def baz (rel .'type': 'bar')
